# sum-chain

./: .gitignore  ACADEMIC-CREDENTIALS-HANDOFF-SPEC.md  ACADEMIC-CREDENTIALS-IMPLEMENTATION-ADDENDUM.md  ACADEMIC-CREDENTIALS-RPC-GUIDE.md  ACADEMIC-RPC-QUICK-START.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT-ANNOUNCEMENT.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT-GUIDE.md  Dockerfile  GOVERNANCE.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  PRIVATE-KEY-CONVERSION-GUIDE.md  README.md  RELEASE.md  SECURITY.md  SRC-81X-COMMITMENT-CANONICALIZATION.md  SRC-81X-EDUCATIONAL-GUIDE.md  SRC-81X-SCHEMA-VALIDATION.md  SRC-MULTI-FAMILY-SCHEMA-VALIDATION.md  SUM-HYPOTHESIS-INSTITUTE-SETUP.md  SUMAIL-VERIFICATION-PROTOCOL-ANSWERS.md  SUMALLET-INTEGRATION-GUIDE.md  TEST-SUMALLET-QUERY.md  VERIFICATION-TEAM-SUMMARY.md  WEB-WALLET-RPC-IMPLEMENTATION.md  config.json  config.toml  docker-compose.yaml  genesis.json
crates/beacon-crypto/: Cargo.toml
crates/beacon-crypto/src/: bls.rs  ecies.rs  hash_to_scalar.rs  lib.rs  vectors.rs
crates/beacon-runtime/: Cargo.toml
crates/beacon-runtime/src/: context.rs  dkg.rs  lib.rs  params.rs  rounds.rs  signing.rs  tests.rs  validate.rs  wire.rs
crates/bridge/: Cargo.toml  README.md
crates/bridge/src/: config.rs  error.rs  ethereum.rs  lib.rs  relayer.rs  types.rs  wrapped_tokens.rs
crates/consensus/: Cargo.toml  README.md
crates/consensus/src/: engine.rs  lib.rs  poa.rs
crates/crypto/: Cargo.toml  README.md
crates/crypto/src/: keypair.rs  lib.rs  messaging.rs  signature.rs
crates/crypto/tests/: br1_beacon_vectors.rs  omninode_claim_assembly.rs
crates/genesis/: Cargo.toml  README.md
crates/genesis/src/: lib.rs
crates/integration-tests/: Cargo.toml  README.md
crates/integration-tests/src/: education_e2e_tests.rs  lib.rs  nft_tests.rs  security_tests.rs  snip_v2_tests.rs  stress_tests.rs
crates/nft/: Cargo.toml  README.md
crates/nft/src/: collection.rs  error.rs  lib.rs  metadata.rs  ops.rs  registry.rs  token.rs  transaction.rs
crates/nft/tests/: ops_fixtures.rs
crates/node/: Cargo.toml  README.md
crates/node/src/: config.rs  consensus_wrapper.rs  main.rs  node.rs  tx_broadcaster.rs
crates/node/tests/: deploy_health_probes_guard.rs
crates/p2p/: Cargo.toml  README.md
crates/p2p/src/: behaviour.rs  block_syncer.rs  config.rs  lib.rs  network.rs  node_key.rs  peer_manager.rs  sync.rs
crates/primitives/: Cargo.toml  README.md
crates/primitives/src/: address.rs  agreement.rs  block.rs  docclass.rs  education.rs  employment.rs  equity.rs  finance.rs  governance.rs  hash.rs  healthcare.rs  inference_attestation.rs  inference_settlement.rs  legal.rs  lib.rs  messaging.rs  messaging_sponsored.rs  node_registry.rs  policy_account.rs  proof_eligibility.rs  property.rs  receipt.rs  staking.rs  storage_metadata.rs  supply.rs  tax.rs  transaction.rs  validator_authority.rs
crates/primitives/tests/: education_fixtures.rs  governance_fixtures.rs  inference_attestation_fixtures.rs  inference_settlement_fixtures.rs  proof_eligibility_fixtures.rs  token_ops_fixtures.rs  v2_wire_fixtures.rs  wire_golden_fixtures.rs
crates/rpc/: Cargo.toml  README.md
crates/rpc/src/: api.rs  auth.rs  governance_types.rs  health.rs  inference_settlement_types.rs  lib.rs  metrics.rs  policy_account_types.rs  rate_limit.rs  server.rs  types.rs
crates/rpc/tests/: docs_agreement_methods.rs  docs_finance_methods.rs  docs_governance_methods.rs  docs_healthcare_methods.rs  docs_legal_methods.rs  docs_property_methods.rs  docs_tax_methods.rs  no_direct_messaging_consensus_write.rs
crates/state/: Cargo.toml  README.md
crates/state/src/: agreement_executor.rs  beacon_executor.rs  beacon_store.rs  cache.rs  compute_pool.rs  compute_pool_manager.rs  compute_pool_store.rs  contract_executor.rs  docclass_executor.rs  education_executor.rs  employment_executor.rs  equity_executor.rs  executor.rs  finance_executor.rs  governance_executor.rs  healthcare_executor.rs  inference_attestation_executor.rs  inference_settlement_executor.rs  legal_executor.rs  lib.rs  mempool.rs  messaging_executor.rs  nft_executor.rs  node_registry.rs  policy_account_executor.rs  property_executor.rs  schema_validator.rs  snapshot.rs  staking_executor.rs  state.rs  storage_metadata.rs  supply.rs  tax_executor.rs  token_executor.rs  validator_quorum.rs
crates/state/tests/: accept_assignment_unbonding.rs  archive_reassignment.rs  archive_unbonding.rs  contract_activation_gate.rs  contract_reorg_and_root.rs  education_dispatch.rs  education_mempool.rs  governance_activation_gate.rs  governance_lifecycle.rs  governance_v2.rs  inference_attestation_dispatch.rs  inference_attestation_mempool.rs  inference_settlement.rs  messaging_index_dispatch.rs  policy_account_tests.rs  por_assignment_targeting.rs  por_bounded_scheduler.rs  service_grants.rs  sponsored_registration.rs  supply_correction.rs  supply_governance.rs
crates/storage/: Cargo.toml  README.md
crates/storage/src/: agreement_store.rs  db.rs  docclass_store.rs  employment_store.rs  equity_store.rs  finance_store.rs  governance_store.rs  healthcare_store.rs  legal_store.rs  lib.rs  messaging_store.rs  policy_account_store.rs  property_store.rs  pruner.rs  schema.rs  tax_store.rs
crates/storage/tests/: agreement_registry_reads.rs  contract_state_diff.rs  equity_registry_reads.rs  finance_registry_reads.rs  governance_store.rs  governance_v2_store.rs  healthcare_registry_reads.rs  legal_registry_reads.rs  messaging_index_tests.rs  property_registry_reads.rs  tax_registry_reads.rs
crates/sumc-runtime/: Cargo.toml  README.md
crates/sumc-runtime/src/: error.rs  executor.rs  gas.rs  host.rs  lib.rs  memory.rs  storage.rs  types.rs
crates/sumc-sdk/: Cargo.toml  README.md
crates/sumc-sdk-macros/: Cargo.toml  README.md
crates/token/: Cargo.toml  README.md
crates/wallet/: Cargo.toml  README.md
scripts/: Cargo.toml
scripts/src/: generate_genesis.rs  lib.rs  setup_local_testnet.rs
scripts/tests/: smoke_provision.rs
tools/b0-pre-independent/: Cargo.toml
tools/b0-pre-validator/: Cargo.toml
tools/b0-pre-vmat/: Cargo.toml
(+428 files in other folders)
