[workspace]
resolver = "2"
members = [
    "crates/sumchain-wire",
    "crates/primitives",
    "crates/crypto",
    "crates/beacon-crypto",
    "crates/storage",
    "crates/genesis",
    "crates/state",
    "crates/consensus",
    "crates/p2p",
    "crates/rpc",
    "crates/node",
    "crates/wallet",
    "crates/nft",
    "crates/token",
    "crates/sumc-runtime",
    "crates/sumc-sdk",
    "crates/sumc-sdk-macros",
    "crates/bridge",
    "crates/integration-tests",
    "scripts",
]
# B0-PRE (#123) host-side reproducibility tooling lives outside the workspace so it
# has zero dependency edges into production crates. Proven in CI via `cargo metadata`.
exclude = ["tools"]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["SUM Chain Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/SUM-INNOVATION/sum-chain"

[workspace.dependencies]
# Internal crates
# W1a wire-format leaf (sum-chain #124): the byte-frozen encoding surface,
# re-exported by `sumchain-primitives`.
sumchain-wire = { path = "crates/sumchain-wire", version = "0.3.0" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-big-array = "0.5"
toml = "0.8"
bincode = "1.3"
hex = "0.4"
bs58 = "0.5"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core", "hazmat"] }
blake3 = "1.5"
rand = "0.8"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
sha2 = "0.10"

# Storage
rocksdb = "0.22"

# Networking
libp2p = { version = "0.53", features = ["tokio", "gossipsub", "mdns", "noise", "tcp", "yamux", "macros", "identify", "request-response"] }

# RPC
jsonrpsee = { version = "0.21", features = ["server", "http-client", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
hyper = { version = "1.0", features = ["full"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
parking_lot = "0.12"
home = "0.5"
bytes = "1.5"
futures = "0.3"
async-trait = "0.1"
derive_more = "0.99"

# Password/encryption for wallet
argon2 = "0.5"
aes-gcm = "0.10"
zeroize = { version = "1.7", features = ["derive"] }

# WASM runtime for smart contracts
wasmer = "4.2"
wasmer-compiler-singlepass = "4.2"

# Ethereum bridge
ethers = { version = "2.0", features = ["legacy"] }
k256 = "0.13"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
