[package]
name = "sumchain-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Ethereum bridge for SUM Chain - enables cross-chain token transfers"

[dependencies]
sumchain-primitives = { path = "../primitives" }
sumchain-crypto = { path = "../crypto" }
sumchain-storage = { path = "../storage" }

# Ethereum interaction
ethers = { workspace = true }
k256 = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Utils
parking_lot = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
