[package]
name = "sumchain-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Cryptographic operations for SUM Chain (an L1 blockchain): Ed25519 keypairs / signatures, BLAKE3 hashing, and the X25519 + ChaCha20-Poly1305 KEM used by the SRC-201 messaging subprotocol."
keywords = ["sumchain", "blockchain", "ed25519", "x25519", "chacha20poly1305"]
categories = ["cryptography", "cryptography::cryptocurrencies"]

[dependencies]
sumchain-primitives = { path = "../primitives", version = "0.1.0" }
ed25519-dalek = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
hex = { workspace = true }
bs58 = { workspace = true }
serde-big-array = "0.5"
x25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
curve25519-dalek = "4.1"
sha2 = { workspace = true }

[dev-dependencies]
