[package]
name = "sumchain-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Cryptographic operations for SUM Chain (an L1 blockchain): Ed25519 keypairs / signatures, BLAKE3 hashing, and the X25519 + ChaCha20-Poly1305 KEM used by the SRC-201 messaging subprotocol."
keywords = ["sumchain", "blockchain", "ed25519", "x25519", "chacha20poly1305"]
categories = ["cryptography", "cryptography::cryptocurrencies"]

[dependencies]
sumchain-primitives = { version = "0.2.0", path = "../primitives" }
ed25519-dalek = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
hex = { workspace = true }
bs58 = { workspace = true }
serde-big-array = "0.5"
x25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
curve25519-dalek = "4.1"
sha2 = { workspace = true }

[dev-dependencies]
# Integration tests exercise wire assembly against primitives (TransactionV2 /
# SignedTransaction) plus bincode/hex, which are not transitively available to a
# separate test crate even though `sumchain-primitives`/`hex` are normal deps.
sumchain-primitives = { path = "../primitives" }
bincode = { workspace = true }
hex = { workspace = true }
