[package]
name = "sumchain-genesis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Genesis configuration for SUM Chain"

[dependencies]
sumchain-primitives = { path = "../primitives" }
sumchain-crypto = { path = "../crypto" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
bs58 = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
