[package]
name = "sumchain-integration-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
sumchain-primitives = { path = "../primitives" }
sumchain-crypto = { path = "../crypto" }
sumchain-storage = { path = "../storage" }
sumchain-genesis = { path = "../genesis" }
sumchain-state = { path = "../state" }
sumchain-consensus = { path = "../consensus" }
sumchain-p2p = { path = "../p2p" }
sumchain-rpc = { path = "../rpc" }
sumchain-nft = { path = "../nft" }

tokio = { workspace = true }
tempfile = "3.10"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }

[features]
# Enable test modules that reference primitives schemas removed during
# migration (e.g. stress_tests.rs uses an older NftExecutor::execute signature).
# Run `cargo test -p sumchain-integration-tests --features legacy_tests` to
# compile them; expect failures until they are updated. Mirrors the same
# pattern in `crates/state/Cargo.toml`.
legacy_tests = []
