[package]
name = "sumchain-nft"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SUM-721 Native NFT Standard for certified documents and digital assets"

[dependencies]
sumchain-primitives = { path = "../primitives" }
sumchain-crypto = { path = "../crypto" }
serde = { workspace = true }
serde_json = { workspace = true }
serde-big-array = "0.5"
bincode = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
