[package]
name = "sumchain-p2p"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "P2P networking for SUM Chain using libp2p"

[dependencies]
sumchain-primitives = { path = "../primitives" }
libp2p = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
