[package]
name = "sumchain-primitives"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Core primitive types and on-chain wire formats for SUM Chain (an L1 blockchain): addresses, hashes, blocks, transactions, receipts, and subprotocol payloads including the OmniNode InferenceAttestation suite."
keywords = ["sumchain", "blockchain", "primitives", "l1", "wire"]
categories = ["cryptography::cryptocurrencies", "data-structures", "encoding"]

[dependencies]
# Byte-frozen on-chain wire formats (sum-chain #124 / W1a). All moved wire
# types are re-exported from this crate's root so downstream `use
# sumchain_primitives::…` paths are unchanged. The leaf is ed25519-free;
# the Ed25519 attestation verification below stays in this crate.
sumchain-wire = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }
bs58 = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
serde-big-array = "0.5"
# Used only by `inference_attestation::verify_attestation_signature` to verify
# the inner OmniNode Stage 6 attestation signature without taking a circular
# dependency on `sumchain-crypto` (which depends on primitives).
ed25519-dalek = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
