[package]
name = "sumchain-rpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "JSON-RPC server for SUM Chain"

[dependencies]
sumchain-primitives = { path = "../primitives" }
sumchain-crypto = { path = "../crypto" }
sumchain-storage = { path = "../storage" }
sumchain-state = { path = "../state" }
sumchain-consensus = { path = "../consensus" }
sumchain-genesis = { path = "../genesis" }
sumchain-p2p = { path = "../p2p" }
jsonrpsee = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
bs58 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
hyper = { workspace = true }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tower = { workspace = true }
tower-http = { workspace = true }
blake3 = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
