[package]
name = "sumchain-state"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "State management and transaction execution for SUM Chain"

[dependencies]
sumchain-primitives = { path = "../primitives" }
sumchain-crypto = { path = "../crypto" }
sumchain-storage = { path = "../storage" }
sumchain-genesis = { path = "../genesis" }
sumchain-nft = { path = "../nft" }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
hex = { workspace = true }
lru = "0.12"

[dev-dependencies]
tempfile = "3.10"
