[package]
name = "sumchain-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Persistent storage for SUM Chain using RocksDB"

[dependencies]
sumchain-primitives = { path = "../primitives" }
rocksdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
