[package]
name = "sumc-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WASM runtime for SUM Chain smart contracts"

[dependencies]
sumchain-primitives = { path = "../primitives" }
sumchain-crypto = { path = "../crypto" }
sumchain-storage = { path = "../storage" }

wasmer = { workspace = true }
wasmer-compiler-singlepass = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
