[package]
name = "sumc-sdk-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Procedural macros for SUM Chain smart contract SDK"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }
