[package]
name = "sumc-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SDK for developing SUM Chain smart contracts"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }

# Proc macros for contract attributes
sumc-sdk-macros = { path = "../sumc-sdk-macros", optional = true }

[features]
default = ["macros"]
macros = ["sumc-sdk-macros"]

[dev-dependencies]
