[package]
name = "sumchain-token"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SRC-20 fungible token standard for SUM Chain"

[dependencies]
sumchain-primitives = { path = "../primitives" }

serde = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
