[package]
name = "b0-pre-independent"
version = "0.0.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"
description = "B0-PRE (#123) independent cross-checker: a from-scratch re-derivation of the deterministic B0-PRE artifacts (exp table, fixtures, statement bytes, hashes) used to hold the reference validator to byte-for-byte agreement. Shares no executor code with b0-pre-validator."

# Pinned per B0-PRE plan §1. Intentionally minimal: no schemars/jsonschema and
# no shared code with the reference validator, so agreement is meaningful.
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "=1.0.149", features = ["arbitrary_precision"] }
blake3 = "=1.5.4"
num-bigint = "=0.4.6"
num-rational = "=0.4.2"
num-traits = "=0.2.19"
