[package]
name = "simple-token-contract"
version = "0.1.0"
edition = "2021"
description = "Simple token smart contract example for SUM Chain"

[lib]
crate-type = ["cdylib"]

[dependencies]
sumc-sdk = { path = "../../../crates/sumc-sdk" }
sumc-sdk-macros = { path = "../../../crates/sumc-sdk-macros" }

[profile.release]
opt-level = "z"       # Optimize for size
lto = true            # Enable Link-Time Optimization
codegen-units = 1     # Single codegen unit for better optimization
strip = true          # Strip debug info
panic = "abort"       # Abort on panic (smaller binary)
