[package]
name = "b0-pre-sp1-verifier-material"
version = "0.0.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"
description = "Deterministic extraction + contract test for the immutable material consumed by the pinned SP1 6.3.1 Groth16 terminal verifier. Builds/runs only in the container venue."

# Pinned to the SP1 candidate. The verifier-material bytes are READ from this
# crate at run time; they are never hardcoded here.
[dependencies]
sp1-verifier = "=6.3.1"
blake3 = "=1.5.4"
serde_json = { version = "=1.0.149", features = ["arbitrary_precision"] }
